# next-gain

./: Cargo.toml
gui/: bun.lockb
gui/app/: page.tsx
gui/components/knobs/: DBKnob.tsx  KnobBase.tsx  KnobBaseThumb.tsx
src/: lib.rs
